@@ -299,10 +299,21 @@ class pyparsing_test:
         lineno_width = len(str(end_line))
         max_line_len = max(len(line) for line in s_lines)
         lead = " " * (lineno_width + 1)
+        if max_line_len >= 99:
+            header0 = (
+                lead
+                + "".join(
+                    "{}{}".format(' ' * 99, (i + 1) % 100) for i in range(max(max_line_len // 100, 1))
+                )
+                + "\n"
+            )
+        else:
+            header0 = ""
         header1 = (
+            header0 +
             lead
             + "".join(
-                "         {}".format(i + 1) for i in range(-(-max_line_len // 10))
+                "         {}".format((i + 1) % 10) for i in range(-(-max_line_len // 10))
             )
             + "\n"
         )
